set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
if(NOT CMAKE_BUILD_TYPE)
  set(CMAKE_BUILD_TYPE Release)
endif()

set(CMAKE_CXX_FLAGS "-Wall -Wextra")
set(CMAKE_CXX_FLAGS_DEBUG "-g")
set(CMAKE_CXX_FLAGS_RELEASE "-O3")
add_compile_definitions(NOAUDIO)
project(GameboyWebserver)
add_subdirectory("GameboyTKP")
add_executable(GameboyWebserver main.cxx gb_headlesswrapper.cxx)
target_link_libraries(GameboyWebserver GameboyTKP)
